updated semanticHighlighting for variables because MS C++ takes over

--- a/extensions/thecodemonkey.synthwave-x-fluoromachine-epic-animations-1.4.13/package.json
+++ b/extensions/thecodemonkey.synthwave-x-fluoromachine-epic-animations-1.4.13/package.json
@@ -45,6 +45,7 @@
 		"id": "58f94c62-ca25-465f-b51b-587c7e0c13a3",
 		"publisherId": "61e94066-b763-4dea-aa92-ff40e7f21ff0",
 		"publisherDisplayName": "TheCodemonkey",
-		"installedTimestamp": 1639601201230
+		"installedTimestamp": 1639601201230,
+		"size": 10256893
 	}
 }
